[package]
name = "h2_hello_world_server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "example_h2_hello_world_server"
path = "main.rs"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.9"
bytes = "1"
http = "0.2"
# tokio = { git = "https://github.com/futurewei-cloud/tokio", branch = "wasmdev", features = ["rt", "sync", "macros", "net"] }
# h2 = { git = "https://github.com/futurewei-cloud/h2", branch = "wasmdev" }
tokio = { path = "../../../wasm/tokio/tokio", features = ["rt", "sync", "macros", "net"] }
h2 = { path = "../../../wasm/h2" }