[package]
name = "hyper_html_server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "example_hyper_html_server"
path = "main.rs"

[dependencies]
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
bytes = "1"
http = "0.2"
http-body = { git = "https://github.com/hyperium/http-body", rev = "6d7dd17" }
http-body-util = { git = "https://github.com/hyperium/http-body", rev = "6d7dd17" }
# tokio = { git = "https://github.com/futurewei-cloud/tokio", branch = "wasmdev", features = ["rt", "sync", "macros", "net", "fs"] }
# hyper = { git = "https://github.com/futurewei-cloud/hyper", branch = "wasmdev" }
tokio = { path = "../../../wasm/tokio/tokio", features = ["rt", "sync", "macros", "net", "fs"] }
hyper = { path = "../../../wasm/hyper", features = ["full"] }