[package]
name = "mio_tcp_echo"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "example_mio_tcp_echo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.9"
bytes = "1.2"
merak-evm-agent-wasm-sdk = { path = "../../wasm_sdk" }
# mio = { git = "https://github.com/futurewei-cloud/mio", branch = "wasmdev", features = ["net", "os-poll"] }
mio = { path = "../../../wasm/mio", features = ["net", "os-poll"] }