[package]
name = "mio_tcp_server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "example-mio-tcp-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.9"
bytes = "1.2"
merak-evm-agent-wasm-sdk = { path = "../../wasm_sdk" }
mio = { path = "../../../wasm/mio", features = ["net", "os-poll"] }