[package]
name = "tokio_tcp_echo"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "example_tokio_tcp_echo"
path = "main.rs"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.9"
merak-evm-agent-wasm-sdk = { path = "../../wasm_sdk" }
tokio = { git = "https://github.com/futurewei-cloud/tokio", branch = "wasmdev", features = ["rt", "time", "sync", "macros", "io-util", "net"] }